; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xp_sn2.c_xp_remote_memcpy_sn2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xp_sn2.c_xp_remote_memcpy_sn2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTE_NOTIFY = common dso_local global i32 0, align 4
@BTE_WACQUIRE = common dso_local global i32 0, align 4
@BTE_SUCCESS = common dso_local global i64 0, align 8
@xpSuccess = common dso_local global i32 0, align 4
@xp = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [81 x i8] c"bte_copy() on shub2 failed, error=0x%x dst_pa=0x%016lx src_pa=0x%016lx len=%ld\\n\00", align 1
@.str.1 = private unnamed_addr constant [70 x i8] c"bte_copy() failed, error=%d dst_pa=0x%016lx src_pa=0x%016lx len=%ld\\n\00", align 1
@xpBteCopyError = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64)* @xp_remote_memcpy_sn2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xp_remote_memcpy_sn2(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i32, i32* @BTE_NOTIFY, align 4
  %13 = load i32, i32* @BTE_WACQUIRE, align 4
  %14 = or i32 %12, %13
  %15 = call i64 @bte_copy(i64 %9, i64 %10, i64 %11, i32 %14, i32* null)
  store i64 %15, i64* %8, align 8
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* @BTE_SUCCESS, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* @xpSuccess, align 4
  store i32 %20, i32* %4, align 4
  br label %40

21:                                               ; preds = %3
  %22 = call i64 (...) @is_shub2()
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %21
  %25 = load i32, i32* @xp, align 4
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* %7, align 8
  %30 = call i32 @dev_err(i32 %25, i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0), i64 %26, i64 %27, i64 %28, i64 %29)
  br label %38

31:                                               ; preds = %21
  %32 = load i32, i32* @xp, align 4
  %33 = load i64, i64* %8, align 8
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @dev_err(i32 %32, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.1, i64 0, i64 0), i64 %33, i64 %34, i64 %35, i64 %36)
  br label %38

38:                                               ; preds = %31, %24
  %39 = load i32, i32* @xpBteCopyError, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %19
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i64 @bte_copy(i64, i64, i64, i32, i32*) #1

declare dso_local i64 @is_shub2(...) #1

declare dso_local i32 @dev_err(i32, i8*, i64, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
